# text-to-image-generation

./: .gitignore  DISTRIBUTED_QUICK_START.md  NEW_SESSION_SUMMARY.md  PROJECT_COMPLETE_GUIDE.md  README.md  README_DISTRIBUTED.md  pyproject.toml
.cursor/rules/: uv-based-project.mdc
configs/: train_config.yaml
configs/accelerate/: single_gpu.yaml
data/train/input_text/: 0.txt  1.txt  2.txt  3.txt  4.txt
docs/: distributed_training_guide.md
examples/: attention_code_explanation.py  chunking_visualization.py  performance_benchmark.py  simple_attention_demo.py
scripts/: generate.py  master_deploy.ps1  network_test.ps1  train.py  worker_setup.ps1  worker_setup_en.ps1  worker_setup_fixed.ps1  worker_setup_utf8bom.ps1
src/: __init__.py
src/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py  text_chunking.py
src/inference/: __init__.py  generator.py  post_processor.py
src/models/: __init__.py  diffusion_model.py  extended_clip.py  lora_wrapper.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config_utils.py  logging_utils.py  visualization.py
